syntax = "proto3";

package auth;

option go_package = "re-sep/proto";

import "user_config.proto";

message Empty {}

message Username {
	string name = 1;
}

service Auth {
	rpc Auth(Empty) returns (AuthResponse) {}
	rpc UpdateUsername(Username) returns (User) {}
	rpc UpdateUserConfig(config.UserConfig) returns (config.UserConfig) {}
	rpc GetUserConfig(Empty) returns (config.UserConfig) {}
}

message User {
	string sub = 1;
	string name = 2;
}

message AuthResponse {
	string token = 1;
	User user = 2;
}

